--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait">
@@ -58,15 +58,20 @@
             android:name=".ChatActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".NewGroupActivity"
+        <activity
+            android:name=".NewGroupActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".AddNewGroupActivity"
+        <activity
+            android:name=".AddNewGroupActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".GroupDetailsActivity"
+        <activity
+            android:name=".GroupDetailsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".UserProfileActivity"
+        <activity
+            android:name=".UserProfileActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".EventProfileActivity" />
+        <activity android:name=".CreatePostActivity"></activity>
     </application>
 
 </manifest>
