--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".CreatePostActivity"
+            android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -72,7 +72,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".EventProfileActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".SplashActivity"
+        <activity android:name=".CreatePostActivity"
             android:screenOrientation="portrait"/>
     </application>
 
