--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding
+            {
+                enabled true
+            }
 }
 configurations {
     cleanedAnnotations
@@ -49,6 +53,10 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.chauthai.overscroll:overscroll-bouncy:0.1.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
